# TakuTail

./: README.md  build.sh  pyproject.toml  render.yaml
tacktail/: manage.py
tacktail/tacktail/: asgi.py  settings.py  urls.py  wsgi.py
tacktail/templates/: base.html
takutail/: manage.py
takutail/cocktails/: admin.py  models.py  serializers.py  urls.py  views.py
takutail/cocktails/migrations/: 0001_initial.py  0002_cocktail_alcohol_content.py  0002_cocktail_amount1_cocktail_amount2_cocktail_amount3_and_more.py
takutail/cocktails/templates/cocktails/: cocktail_detail.html  cocktail_list.html  possible_cocktails.html  random_cocktail.html
takutail/cocktails/templates/cocktails/partials/: cocktail_card.html
takutail/core/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
takutail/core/management/commands/: import_csv.py
takutail/core/management/commands/csv/: cocktail.csv  cocktail_name2.csv  other.csv  (+2 more)
takutail/core/migrations/: 0001_initial.py  0002_sake_amount_wari_amount.py
takutail/core/templates/: home.html  login.html  signup.html
takutail/ingredients/: serializers.py  urls.py  views.py
takutail/static/: style.css
takutail/static/css/: style.css
takutail/takutail/: asgi.py  settings.py  urls.py  wsgi.py
takutail/templates/: base.html
takutail/templates/core/: login.html
takutail/users/: admin.py  models.py  serializers.py  urls.py  views.py
takutail/users/migrations/: 0001_initial.py  0002_remove_userother_quantity_remove_usersake_quantity_and_more.py
takutail/users/templates/users/: ingredients_list.html
